gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: dev-gateway
spec:
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts: 
        - "istio-system-dev-gateway-525eca1d5089dbdc-istio-system.apps.cluster-nhbgd.nhbgd.sandbox1866.opentlc.com"
  selector:
    istio: ingressgateway
